<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="10sp"
    android:paddingTop="10sp"
    android:paddingRight="10sp"
    android:paddingBottom="10sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/disp_LO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="20sp"
        >

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"
            android:text=""

            android:gravity="right"
            android:scrollHorizontally="false"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_LO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disp_LO"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp">

        <Button
            android:id="@+id/cancel_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/c_btn"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hour_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/hr_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/min_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/mn_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sec_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sc_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:text="@string/del_btn"
            android:textColor="@color/colorAccent"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btns_LO"
        android:padding="5dp"
        android:layout_alignParentLeft="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <Button
            android:id="@+id/num7"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="#CCFFFFFF"
            android:text="@string/btn_7"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/num8"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CCFFFFFF"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:padding="5dp"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:text="@string/btn_9"
            android:padding="5dp"
            android:textSize="40sp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_4"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_5"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_6"
                android:padding="5dp"
                android:textSize="40sp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_1"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_2"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_3"
                android:padding="5dp"
                android:textSize="40sp"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/deci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_dot"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/num0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/btn_0"
                android:padding="5dp"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/equ"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:padding="5dp"
                android:text="@string/btn_eq"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btns_LO">

        <Button
            android:id="@+id/div_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"

            android:text="@string/btn_div"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mult_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:padding="5dp"
            android:text="@string/btn_mul"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sub_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:padding="5dp"
            android:text="@string/btn_sub"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:padding="5dp"
            android:text="@string/btn_add"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/oneby"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/btn_inv"

            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/per_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:padding="5dp"
            android:text="@string/btn_per"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>